--- a/views/partials/_navbar.html
+++ b/views/partials/_navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg" aria-label="Main Navigation">
+<nav class="navbar navbar-expand-lg" aria-label="Main Navigation" data-scroll-section>
     <div class="container-fluid">
         <a class="navbar-brand text-primary logo display-5 col-1" href="/">
             <img src="{{ url_for('static', filename='/img/cinema_stream_logo.png') }}" alt="Cinema Stream"
@@ -25,9 +25,7 @@
                 <li class="nav-item ms-4">
                     <a class="nav-link" href="/user/user_library.php">Library</a>
                 </li>
-                <li class="nav-item ms-4">
-                    <a class="nav-link" href="/user/profile.php">Profile</a>
-                </li>
+                
                 <li class="nav-item ms-4">
                     <a class="nav-link" href="/user/mailbox.php">Mailbox</a>
                 </li>
@@ -37,6 +35,9 @@
                 </li>
 
                 {% if 'user_id' in session %}
+                <li class="nav-item ms-4"></li>
+                    <a class="nav-link" href="/user/profile">Profile</a>
+                </li>
                     {%if 'admin' in session %}
                         <li class="nav-item ms-4">
                             <a class="btn btn-primary px-4 py-2" href="/admin">Admin Dashboard</a>
