--- a/views/index.html
+++ b/views/index.html
@@ -81,7 +81,7 @@
                             <div class="d-flex">
                                 <button type="button" onclick="deleteMovie({{movie.id}})" class="me-2 btn btn-danger">Delete Movie</button>
 
-                                <a href="/update_movie/{{movie.id}}" class="btn btn-primary">Update movie</a>
+                                <a href="/movie/update/{{movie.id}}" class="btn btn-primary">Update movie</a>
                             </div>
                         </div>
                     </div>
