--- a/views/movie/single.html
+++ b/views/movie/single.html
@@ -2,14 +2,6 @@
 {% block body %}
 <section data-scroll-section class="post-content">
     <div class="container d-flex flex-column">
-        <?php if ($movie['trailer_link'] != NULL) { ?>
-            <div class="videoSection p-0 mb-3">
-                <div class="video">
-                    <iframe title="YouTube Video" class="w-100 h-100"
-                        src="{{movie.trailer_link}}"></iframe>
-                </div>
-            </div>
-        <?php } ?>
         <div id = "single_movie_deets" class="w-100 d-flex row mt-3 px-0 justify-between">
             <div class="col-xl-6 col-lg-6 col-12 d-flex flex-column">
                 <h1 class="display-1">
@@ -22,7 +14,7 @@
                     <div class="d-flex align-center mb-3">
                         {% if (movie.average_rating) %}
                             {%for i in range(1, movie.average_rating | int + 1)%}
-                                <img style="width:20px; height: 20px;" class="mr-2" src="{{url_for('static', filename = 'star.png') }}" alt="poster">
+                                <img style="width:20px; height: 20px;" class="mb-1" src="{{ url_for('static', filename='img/star.png') }}" alt="star">
                             {%endfor%}
                         {%endif%}
                     </div>
@@ -123,7 +115,7 @@
                     <div class="card h-100">
                         <div class="card-body mt-2">
                             {%for i in range(1, review.rating + 1) %}
-                                <img style="width:20px; height: 20px;" class="mb-1" src="{{url_for('static', filename='/img/star.png }}" alt="star">
+                                <img style="width:20px; height: 20px;" class="mb-1" src="{{url_for('static', filename='/img/star.png') }}" alt="star">
                             {%endfor%}
                             <p class="card-text">
                                 {{review.body}}
