--- a/views/movie/update.html
+++ b/views/movie/update.html
@@ -3,7 +3,7 @@
 
 <section data-scroll-section class="container pt-5">
     <h1>Update Movie</h1>
-    <form action="/api/movie/update" method="POST" enctype="multipart/form-data">
+    <form action="/movie/api/update" method="POST" enctype="multipart/form-data">
         <input type="hidden" name="movie_id" value="{{movie.id}}">
         <div class="form-group mt-3">
             <label for="exampleFormControlInput1">Movie Name</label>
@@ -35,53 +35,7 @@
             <input type="date" value="{{movie.release_date}}" name="release_date" class="form-control"
                 placeholder="Release Date">
         </div>
-        <div class="form-group mt-3">
-            <div class="form-check d-flex column flex-wrap flex-column" style="max-height: 800px">
-                <label for="exampleFormControlInput1">Languages</label>
-                {% for mlang in movie.languages.split(',') %}
-                    {% set movlang = mlang.split(':') %}
-                        {% set printed_langs = printed_langs + [movlang[1]] %}
-                    <div class="mb-2">
-                        <input class="form-check-input" id="lang_{{ movlang[0] }}" type="checkbox" name="langs[]" value="{{ movlang[0] }}" checked>
-                        <label class="form-check-label">
-                            {{ movlang[1] }}
-                        </label>
-                    </div>
-                {%endfor%}
-                {% for lang in languages %}
-                    {% if lang['name'] not in printed_langs %}
-                        {% set printed_langs = printed_langs + [lang['name']] %}
-                        {% set checked = 'checked' if lang['name'] in langs_array else '' %}
-                        <div class="mb-2">
-                            <input class="form-check-input" type="checkbox" id="lang_{{ lang['id'] }}" name="langs[]" value="{{ lang['id'] }}" {{ checked }}>
-                            <label class="form-check-label">
-                                {{ lang['name'] }}
-                            </label>
-                        </div>
-                    {% endif %}
-                {% endfor %}
-            </div>
-        </div>
-        <!-- <div class="form-group mt-3">
-            <label for="exampleFormControlInput1">Genres</label>
-            <?php
-            for ($i = 0; $i < $genres->num_rows; $i++) { ?>
-                <?php $genre = $genres->fetch_assoc();
-                if (!in_array($genre['id'], $printedGenres)) {
-                    $printedGenres[] = $genre['id'];
-
-                    $checked = in_array($genre['name'], $genres_array) ? 'checked' : ''; ?>
-
-                    <div class="form-check p-0">
-                        <input class="form-check-input" type="checkbox" name="genres[]" value="<?php echo $genre['id'] ?>" <?php echo $checked ?>>
-                        <label class="form-check-label" for="flexCheckDefault">
-                            <?php echo $genre['name']; ?>
-                        </label>
-                    </div>
-                <?php } ?>
-
-            <?php } ?>
-        </div> -->
+        
         <div class="form-group mt-3">
             <label for="exampleFormControlTextarea1">Synopsis</label>
             <textarea name="synopsis" value="{{movie.synopsis}}" class="form-control"
