--- a/views/user/register.html
+++ b/views/user/register.html
@@ -29,7 +29,7 @@
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input type="password" name="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary">Register</button>
+        <button type="submit" class="btn btn-success w-100">Register</button>
       </form>
       <div class = "w-75 mt-2">
         <p>Have an account? Click <a href = "/user/login">here</a> to login</p>
