--- a/public/css/style.css
+++ b/public/css/style.css
@@ -74,13 +74,9 @@
     font-size: 15px;
     line-height: 1.5;
   }
-  
-  body {
-    background-color: #faf6f2;
-  }
-  
-  footer a {
-    color: black;
+
+  nav, footer {
+    background-color: #3f3f3f;
   }
   
   footer li a:hover {
@@ -166,31 +162,7 @@
     background-color: DodgerBlue !important;
     color: #ffffff;
   }
-  
-  /** Color stuff! */
-  .text-primary {
-    color: #ff9019 !important;
-  }
-  
-  .bg-primary {
-    background-color: #ff9019 !important;
-  }
-  
-  .border-primary {
-    border-color: #ff9019 !important;
-  }
-  
-  .btn-primary {
-    background-color: #ff9019 !important;
-    color: black;
-    border: none !important;
-  }
-  
-  .btn-primary:hover {
-    color: black;
-    background-color: #d67207 !important;
-  }
-  
+
   .logo {
     font-size: 1.4rem;
   }
@@ -202,13 +174,13 @@
     align-items: center;
     background-image: linear-gradient(rgba(0, 0, 0, 0.349), rgba(0, 0, 0, 0.329));
   }
-  
+
   .aboutUsContainer {
     justify-content: left;
     padding-top: 0px;
     padding-bottom: 30px;
   }
-  
+
   .aboutUsContainer img {
     border: solid;
     border-radius: 25px;
@@ -216,43 +188,43 @@
     height: 80%;
     width: 90%;
   }
-  
+
   .aboutUsHeading {
     margin-bottom: 0;
   }
-  
+
   .sectionHeader {
     padding-top: 50px;
     text-align: center;
     margin-bottom: 40px;
   }
-  
+
   .sectionHeader h2 {
     text-align: center;
   }
-  
+
   .aboutUsDetails {
     padding-top: 60px;
     padding-bottom: 20px;
     text-align: center;
   }
-  
+
   .gettingStarted {
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 40px;
   }
-  
+
   .aboutCol {
     border-style: groove;
     min-height: 150px;
   }
-  
+
   .aboutBody {
     text-align: center;
   }
-  
+
   .aboutFooter {
     text-align: center;
   }
@@ -373,10 +345,6 @@
     header {
       padding-left: 0 !important;
       padding-right: 0 !important;
-    }
-  
-    .nav-item {
-      margin-top: 10px !important;
     }
   
     .card-overlay {
