--- a/views/index.html
+++ b/views/index.html
@@ -13,75 +13,97 @@
             </div>
             <select name="genre" class="ms-2 form-select w-25" aria-label="Default select example">
             </select>
-            <button type="submit" class="ms-2 btn btn-primary">Search</button>
+            <button type="submit" class="ms-2 btn btn-info text-white">Search</button>
         </form>
     </div>
 
     <section id="movieSection" data-scroll class="container d-flex p-2 flex-wrap">
         {% for movie in movies %}
-            <div class="col-xl-4 col-l-4 col-sm-12 col-12 col-md-6 p-1">
+            <div class="col-xl-4 col-l-4 col-sm-12 col-12 col-md-6 p-1 mb-4">
                 <div class="card item-card h-100">
-                    <img class="card-img-top" src="https://image.tmdb.org/t/p/w500{{movie.image_url}}" alt="Card image cap">
+                    <div class="dropdown">
+                        <button class="btn btn-info dropdown-toggle text-white w-100" type="button" data-bs-toggle="dropdown">
+                            Admin Controls
+                        </button>
+                        <ul class="dropdown-menu w-100">
+                            <li>
+                                <a href="/movie/update/{{movie.id}}" class="dropdown-item text-success">
+                                    <i class="fas fa-edit mr-2"></i> Update movie</a>
+                            </li>
+                            <li>
+                                <a href="/movie/api/delete/{{movie.id}}" class="dropdown-item text-danger">
+                                <i class="fas fa-trash mr-2"></i> Delete Movie</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="view overlay border-bottom">
+                        <img class="card-img-top" src="https://image.tmdb.org/t/p/w500{{movie.image_url}}" alt="{{movie.name}}">
+                    </div>
                     <div class="card-body d-flex flex-column justify-content-between">
                         <div>
                             <h2 class="card-title">
                                 {{ movie.name }}
                             </h2>
+                            <hr class="w-100" />
+
                             <p class="card-text mb-0">
                                 {{ movie.synopsis }}
                             </p>
 
-                            {% if (movie.average_rating) %}
-                            {%for i in range(1, movie.average_rating | int + 1)%}
-                                <img style="width:20px; height: 20px;" class="mt-3 mb-1" src="/static/star.png" alt="star">
-                            {%endfor%}
-                            <p>From
-                                {{movie.total_reviews}} reviews
-                            </p>
-                            {%endif%}
+                            <hr class="w-100" />
 
-                            <p class="mb-2 mt-2">Available in:</p>
-                            <div class="full-width mt-1 mb-1">
-<!--                                {% for lang in movie.languages %}-->
-<!--                                    <span class="badge badge-secondary bg-secondary">-->
-<!--                                        {{lang}}-->
-<!--                                    </span>-->
-<!--                                {%endfor%}-->
+<!--                            {% if movie.average_rating %}-->
+<!--                            {%for i in range(1, movie.average_rating | int + 1)%}-->
+<!--                                <img style="width:20px; height: 20px;" class="mt-3 mb-1" src="/static/star.png" alt="star">-->
+<!--                            {% endfor %}-->
+<!--                            <p>From-->
+<!--                                {{movie.total_reviews}} reviews-->
+<!--                            </p>-->
+<!--                            {% endif %}-->
+                            <div class="row mt-2">
+                                <div class="col text-start">
+                                    <p>
+                                        <i class="fas fa-calendar mr-2"></i> {{movie.release_date}}
+                                    </p>
+                                </div>
+                                <div class="col text-end">
+                                    <p class="card-text"><i class="fas fa-clock mr-2"></i>
+                                        {{movie.runtime}} minutes
+                                    </p>
+                                </div>
                             </div>
-
-                            <p class="mb-0">Run time:</p>
-                            <p class="card-text">
-                                {{movie.runtime}} minutes
-                            </p>
-                            <p class="mb-0">Price:</p>
-                            <p class="card-text">$
-                                {{movie.price}}
-                            </p>
-
-                            <div class="full-width mb-2">
-                                <p class="mb-0">Genres:</p>
+                            <div class="row mt-2">
+                                <div class="col text-start">
+                                    <p class="mb-2 mt-2">Available in:</p>
+                                    <div class="full-width mt-1 mb-1">
+        <!--                                {% for lang in movie.languages %}-->
+        <!--                                    <span class="badge badge-secondary bg-secondary">-->
+        <!--                                        {{lang}}-->
+        <!--                                    </span>-->
+        <!--                                {%endfor%}-->
+                                    </div>
+                                </div>
+                                <div class="col text-end">
+                                    <p class="mb-0">Genres:</p>
 <!--                                {% for genre in movie.genres %}-->
 <!--                                    <span class="badge badge-secondary bg-secondary">-->
 <!--                                        {{genre}}-->
 <!--                                    </span>-->
 <!--                                {%endfor%}-->
+                                </div>
                             </div>
 
-                            <div>
-                                <p>Released on:
-                                    {{movie.release_date}}
+                            <div class="row">
+                                <div class="col text-end">
+                                    <a href="/movie/single/{{movie.id}}" class="btn" style="background-color: #FFD700;">
+                                    View movie details</a>
+                                </div>
+                            </div>
+
+                            <div class="card-footer text-center mt-2">
+                                <p class="m-0">$
+                                    {{movie.price}}
                                 </p>
-                            </div>
-
-                            <a href="/movie/single/{{movie.id}}" class="btn btn-primary">Rent movie</a>
-                        </div>
-
-                        <div class="d-flex flex-column full-width" style="margin-top: auto;">
-                            <h5 class="mt-3">Admin Controls</h5>
-                            <div class="d-flex">
-                                <button type="button" onclick="deleteMovie({{movie.id}})" class="me-2 btn btn-danger">Delete Movie</button>
-
-                                <a href="/movie/update/{{movie.id}}" class="btn btn-primary">Update movie</a>
                             </div>
                         </div>
                     </div>
