--- a/views/partials/_footer.html
+++ b/views/partials/_footer.html
@@ -1,4 +1,4 @@
-<footer class='mt-3 py-5 flex-column justify-center align-center' style="background-color: #FAEAD5;"
+<footer class='mt-3 py-5 flex-column justify-center align-center footer'
         data-scroll-section>
     <div class="container d-flex">
         <div class="row">
