--- a/views/user/login.html
+++ b/views/user/login.html
@@ -14,7 +14,7 @@
           <label for="exampleInputPassword1" class="form-label">Password</label>
           <input type="password" name="password" class="form-control" id="exampleInputPassword1">
         </div>
-        <button type="submit" class="btn btn-primary">Login</button>
+        <button type="submit" class="btn btn-success w-100">Login</button>
       </form>
     <div class = "w-75 mt-2">
         <p>Don't have an account? Click <a href = "/user/register">here</a> to register</p>
