--- a/views/index.html
+++ b/views/index.html
@@ -7,12 +7,16 @@
     </div>
 
     <div class="container mt-3">
-        <form class="mb-3 d-flex align-items-center" autocomplete="off" method="get" action="/movies">
+        <div class = "d-flex flex-column mb-3">
+            <h3>Admin Controls</h3>
+            <div>
+                <a href="/movie/add" class="btn btn-primary">Add Movie</a>
+            </div>
+        </div>
+        <form class="mb-3 d-flex align-items-center" autocomplete="off" method="post" action="/movie/search">
             <div class="autocomplete" style="width:300px;">
                 <input class="form-control" id="myInput" type="text" name="searchName" placeholder="Movie Name">
             </div>
-            <select name="genre" class="ms-2 form-select w-25" aria-label="Default select example">
-            </select>
             <button type="submit" class="ms-2 btn btn-info text-white">Search</button>
         </form>
     </div>
@@ -21,6 +25,7 @@
         {% for movie in movies %}
             <div class="col-xl-4 col-l-4 col-sm-12 col-12 col-md-6 p-1 mb-4">
                 <div class="card item-card h-100">
+                    {% if 'user_id' in session and 'admin' in session%}
                     <div class="dropdown">
                         <button class="btn btn-info dropdown-toggle text-white w-100" type="button" data-bs-toggle="dropdown">
                             Admin Controls
@@ -36,8 +41,9 @@
                             </li>
                         </ul>
                     </div>
+                    {%endif%}
                     <div class="view overlay border-bottom">
-                        <img class="card-img-top" src="https://image.tmdb.org/t/p/w500{{movie.image_url}}" alt="{{movie.name}}">
+                        <img class="card-img-top" src="{{movie.image_url}}" alt="{{movie.name}}">
                     </div>
                     <div class="card-body d-flex flex-column justify-content-between">
                         <div>
