--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
         {% for movie in movies %}
             <div class="col-xl-4 col-l-4 col-sm-12 col-12 col-md-6 p-1 mb-4">
                 <div class="card item-card h-100">
-                    {% if 'user_id' in session and 'admin' in session%}
+                    {% if 'user_id' in session and 'admin' in session %}
                     <div class="dropdown">
                         <button class="btn btn-info dropdown-toggle text-white w-100" type="button" data-bs-toggle="dropdown">
                             Admin Controls
@@ -36,8 +36,11 @@
                                     <i class="fas fa-edit mr-2"></i> Update movie</a>
                             </li>
                             <li>
-                                <a href="/movie/api/delete/{{movie.id}}" class="dropdown-item text-danger">
-                                <i class="fas fa-trash mr-2"></i> Delete Movie</a>
+                                <form action="{{url_for('movie.delete_movie', id=movie.id)}}" method="POST" class="d-inline">
+                                    <button class="dropdown-item text-danger" type="submit">
+                                        <i class="fas fa-trash mr-2"></i> Delete Movie
+                                    </button>
+                                </form>
                             </li>
                         </ul>
                     </div>
