--- a/views/movie/add.html
+++ b/views/movie/add.html
@@ -41,7 +41,7 @@
                 rows="3"></textarea>
         </div>
         <div class="form-group mt-3">
-            <button type="submit" class="btn btn-primary">Add Movie</button>
+            <button type="submit" class="btn btn-success">Add Movie</button>
         </div>
     </form>
 </section>
