--- a/views/index.html
+++ b/views/index.html
@@ -119,6 +119,57 @@
                 </div>
             </div>
         {% endfor %}
+        
+        <div class = "w-100 d-flex justify-content-center align-items-center">
+        <nav aria-label="Page navigation">
+            <ul class="pagination">
+                {% if page > 1 %}
+                <li class="page-item">
+                    <a class="page-link" href="/?page={{ page - 1 }}&per_page={{ per_page }}{% if searchName %}&searchName={{ searchName }}{% endif %}">
+                        Previous
+                    </a>
+                </li>
+                {% endif %}
+        
+                <!-- Always show the first page -->
+                {% if page > 3 %}
+                <li class="page-item">
+                    <a class="page-link" href="/?page=1&per_page={{ per_page }}{% if searchName %}&searchName={{ searchName }}{% endif %}">1</a>
+                </li>
+                <li class="page-item disabled">
+                    <span class="page-link">...</span>
+                </li>
+                {% endif %}
+        
+                <!-- Show the calculated range of pages around the current page -->
+                {% for p in display_range %}
+                <li class="page-item {% if page == p %}active{% endif %}">
+                    <a class="page-link" href="/?page={{ p }}&per_page={{ per_page }}{% if searchName %}&searchName={{ searchName }}{% endif %}">
+                        {{ p }}
+                    </a>
+                </li>
+                {% endfor %}
+        
+                <!-- Always show the last page -->
+                {% if page < total_pages - 2 %}
+                <li class="page-item disabled">
+                    <span class="page-link">...</span>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="/?page={{ total_pages }}&per_page={{ per_page }}{% if searchName %}&searchName={{ searchName }}{% endif %}">{{ total_pages }}</a>
+                </li>
+                {% endif %}
+        
+                {% if page < total_pages %}
+                <li class="page-item">
+                    <a class="page-link" href="/?page={{ page + 1 }}&per_page={{ per_page }}{% if searchName %}&searchName={{ searchName }}{% endif %}">
+                        Next
+                    </a>
+                </li>
+                {% endif %}
+            </ul>
+        </nav>
+    </div>
     </section>
 </section>
 <script>
