--- a/views/movie/single.html
+++ b/views/movie/single.html
@@ -58,7 +58,7 @@
                         <div>
                             <h3>
                                 {{movie.release_date}}
-                                {{movie.price}}
+
                             </h3>
                         </div>
                         <h2><strong>Price</strong></h2>
@@ -72,16 +72,13 @@
                     <div >
                         <!-- Add to cart -->
                         <form action="/orders/api/add" method="POST" class="form-group">
-                            <input type="hidden" name="movie_id" value="{{ movie.id }}">
+                            <input type="hidden" name="movie_id" value="{{movie[0]}}">
                             <button type="submit" class="btn btn-primary">
                                 Add to Cart
                             </button>
                         </form>
                     </div>
-
                 </div>
-
-
 
                 <div class="genres mt-5 d-flex justify-content-between">
                     <div>
@@ -90,7 +87,6 @@
                             {{movie.genres}}
                         </h3>
                     </div>
-
                     <div>
                         <h2><strong>Run Time</strong></h2>
                         <h3>
@@ -98,9 +94,6 @@
                         </h3>
                     </div>
                 </div>
-
-
-
                 
             </div>
             <div class="col-xl-6 col-lg-6 col-12 d-flex flex-column">
