--- a/views/partials/_navbar.html
+++ b/views/partials/_navbar.html
@@ -35,10 +35,18 @@
                 </li>
 
                 {% if 'user_id' in session %}
-                <li class="nav-item ms-4">
-                    <a class="btn btn-md btn-info text-white" href="/user/profile"><i class="fas fa-id-card mr-1"></i> Profile</a>
+                <li class="nav-item dropdown ms-4 position-relative">
+                    <a class="btn btn-md btn-info text-white dropdown-toggle" href="#" id="profileDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        <i class="fas fa-id-card mr-1"></i> Profile
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="profileDropdown" style="z-index: 1050;">
+                        <li><a class="dropdown-item" href="/user/profile">View Profile</a></li>
+                        <li><a class="dropdown-item" href="/purchases/history">Order History</a></li>
+                    </ul>
                 </li>
-                {% endif %}
+                
+            {% endif %}
+            
 
                 {%if 'user_id' in session %}
                 <li class="nav-item ms-4">
