--- a/views/user/profile.html
+++ b/views/user/profile.html
@@ -2,7 +2,7 @@
 <section class = "container d-flex justify-content-center align-items-center flex-column ">
   <div
     data-scroll-section
-    class="profile-container w-100"
+    class="profile-container w-100 mt-4"
   >
     <h1>User Profile</h1>
     <p>You can view and update your profile details here.</p>
